--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -39,6 +39,12 @@ button{
   border: 1px solid #fff;
   border-radius: 6px;
   padding: 6px 12px;
+  outline: none;
+
+  &:hover{
+    background-color: rgba(255, 255, 255, 0.075);
+    cursor: pointer;
+  }
 }
 
 input{
@@ -68,14 +74,23 @@ input{
   margin: 20px 0;
   h2{
     margin-bottom: 0em;
+    margin-right: .2em;
   }
   input{
-    margin-left: 20px;
+    text-align: right;
     font-size: 2em;
     border-bottom: 2px solid #fff;
-    width: 70px;
+    width: 60px;
     height: 35px;
+    -moz-appearance: textfield;
+
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button{
+      -webkit-appearance: none;
+      margin: 0;
+    }
   }
+
   button{
     font-size: 2em;
   }
@@ -134,8 +149,33 @@ input{
     }
     &.finished{
       background: rgb(255,136,0);
-      background: linear-gradient(0deg, rgba(255,136,0,1) 0%, rgba(255,210,2,1) 100%);    }
+      background: linear-gradient(0deg, rgba(255,136,0,1) 0%, rgba(255,210,2,1) 100%);
+      box-shadow: 0 0 6px #ffae00, 0 0 12px #fbeb64;
+    }
   }
+}
+
+.progress-buttons{
+  visibility: hidden;
+  position: absolute;
+  top:0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display:flex;
+  justify-content: space-between;
+  button{
+    border: none;
+    &:hover{
+      background-color: transparent;
+    }
+    svg{
+      filter: drop-shadow(0 0 1px #000) drop-shadow(0 0 3px #000) drop-shadow(0 0 6px #000);
+    }
+  }
+}
+.progress:hover .progress-buttons{
+  visibility: visible;
 }
 
 .progress-days{
@@ -184,7 +224,7 @@ input{
   padding: 2em;
 
   .form-table{
-    margin: 0 auto 12px auto;
+    margin: 0 auto 25px auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 10px;
