--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -183,8 +183,8 @@ input{
   flex-direction: column;
   align-items: center;
   position: absolute;
-  transform: translate(-36px, -26px);
-  width: 70px;
+  transform: translate(-40px, -26px);
+  width: 80px;
   span{
     margin-bottom: 10px;
   }
@@ -226,7 +226,7 @@ input{
 }
 
 .modal{
-  width: 380px;
+  width: 400px;
   background-color: #1e1e1e;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   border-radius: 10px;
@@ -240,6 +240,7 @@ input{
     row-gap: 5px;
     label{
       font-size: 1.2em;
+      text-align: right;
       justify-self: end;
     }
     input{
@@ -254,3 +255,7 @@ input{
     justify-content: space-evenly;
   }
 }
+
+@import '768';
+@import '600';
+@import '480';
